--- a/internals/generators/containers/actions.ts.hbs
+++ b/internals/generators/containers/actions.ts.hbs
@@ -1,7 +1,7 @@
 /*
 *
 * {{properCase name }} actions
-* make by thuong
+* make by huynq
 */
 import * as types from './constants';
 import { action } from 'typesafe-actions';
