--- a/internals/generators/components/index.tsx.hbs
+++ b/internals/generators/components/index.tsx.hbs
@@ -1,7 +1,7 @@
 /**
 *
 * {{ properCase name }} 
-* make by thuong
+* make by huynq
 */
 import styled from 'styled-components';
 // eslint-disable-next-line @typescript-eslint/no-unused-vars
