--- a/internals/generators/containers/reducers.ts.hbs
+++ b/internals/generators/containers/reducers.ts.hbs
@@ -1,7 +1,7 @@
 /*
 *
 * {{properCase name }} reducers
-* make by thuong
+* make by huynq
 */
 import { Reducer } from 'redux';
 // eslint-disable-next-line @typescript-eslint/no-unused-vars
