--- a/internals/generators/containers/types.ts.hbs
+++ b/internals/generators/containers/types.ts.hbs
@@ -1,7 +1,7 @@
 /*
 *
 * {{properCase name }} types
-* make by thuong
+* make by huynq
 */
 import { ActionType } from 'typesafe-actions';
 import * as actions from './actions';
