--- a/internals/generators/containers/selecters.ts.hbs
+++ b/internals/generators/containers/selecters.ts.hbs
@@ -3,6 +3,6 @@
 * {{properCase name }} selecters
 * make by huynq
 */
-import rootReducer from "redux/root-reducers";
+import rootReducer from "src/redux/root-reducers";
 
 export const select{{properCase name }}Store = ((state: ReturnType<typeof rootReducer>) => state.{{properCase name }})
